--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  background-image: linear-gradient(180deg, #dd3467, yellow);
+  
+  background-color: #f4975c; 
   min-height: 100vh;
   font-family: "Poppins", sans-serif;
 }
@@ -51,7 +52,7 @@ form input {
   min-width: 200px;
   max-width: 500px;
   border-radius: 20px;
-  background-image: linear-gradient(yellow, orange);
+  background-image: white;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 20px;
@@ -85,7 +86,7 @@ select {
 }
 
 .todo-filter {
-  background-color: orange;
+  background-color: yellow;
   width: 170px;
   border-radius: 20px;
   padding: 20px;
@@ -93,7 +94,7 @@ select {
   margin-left: 10px;
   color: black;
   text-align: center;
-  border: 2px solid yellow;
+  border: 2px solid orange;
 }
 
 .list-container {
@@ -110,11 +111,11 @@ select {
   align-items: center;
   list-style: none;
   width: 500px;
-  color: white;
+  color: blue;
 }
 
 .todo-container {
-  background-color: blue;
+  background-color: white;
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
@@ -148,7 +149,7 @@ select {
 }
 
 .todo-trash {
-  background-color: white;
+  background-color: red;
   border: none;
   font-size: 20px;
   padding: 10px;
